name:                rfc
version:             0.0.0.1
synopsis:            Robert Fischer's Common library, for all Robert Fischer's common needs.
description:         See README.md
homepage:            https://github.com/RobertFischer/rfc#README.md
license:             BSD3
license-file:        LICENSE
author:              Robert Fischer
maintainer:          smokejumperit+rfc@gmail.com
copyright:           (c)2017 Robert Fischer
category:            Library
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -Werror
  default-extensions:  NoImplicitPrelude
                     , DataKinds
                     , TemplateHaskell
                     , TypeOperators
                     , OverloadedStrings
                     , PackageImports
                     , LambdaCase
                     , MultiWayIf
                     , Rank2Types
                     , ConstraintKinds
                     , FlexibleContexts
                     , TypeSynonymInstances
                     , FlexibleInstances
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-server
                     , wai
                     , classy-prelude
                     , uuid-types
                     , containers
                     , unordered-containers
                     , string-conversions
                     , monad-control
                     , postgresql-simple
                     , resource-pool
                     , hedis
  exposed-modules:     RFC.Prelude
                     , RFC.Psql
                     , RFC.Redis

source-repository head
  type:     git
  location: https://github.com/RobertFischer/rfc
