name:                rfc
version:             0.0.0.24
synopsis:            Robert Fischer's Common library
description:         An enhanced Prelude and various utilities for Aeson, Servant, PSQL, and Redis that Robert Fischer uses.
homepage:            https://github.com/RobertFischer/rfc#README.md
license:             BSD3
license-file:        LICENSE
author:              Robert Fischer
maintainer:          smokejumperit+rfc@gmail.com
copyright:           (c)2018 Robert Fischer
category:            Library
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


Flag Development
  Description: Turn on errors for warnings
  Default:     False
  Manual:      True

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -fno-warn-orphans
  ghc-options:         -fno-max-relevant-binds
  ghc-options:         -fno-warn-name-shadowing -fno-warn-tabs -Wall-missed-specialisations -Wnoncanonical-monad-instances
  ghc-options:         -Wnoncanonical-monadfail-instances -Wimplicit-prelude -Wmissing-exported-signatures -Widentities
  if flag(Development)
    ghc-options:       -Werror
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude >= 1.4
                     , uuid-types
                     , containers
                     , unordered-containers
                     , string-conversions
                     , resource-pool
                     , data-default
                     , lens
                     , http-types
                     , http-api-data >= 0.3.7.1
                     , time-units
                     , aeson-diff
                     , vector
                     , text
                     , lifted-async >= 0.9.3.3
                     , unliftio >= 0.2.4.0
                     , unliftio-core >= 0.1.1.0
                     , monad-control >= 1.0.2.2
                     , natural-transformation >= 0.4
                     , network-uri
  if impl(ghcjs)
    build-depends:     aeson
                     , attoparsec
                     , bifunctors
                     , miso >= 0.13.0.0
                     , servant >= 0.12.1 && < 0.13
                     , url
                     , mono-traversable >= 1.0.1.1
  else
    build-depends:     servant-server >= 0.13
                     , servant >= 0.13
                     , servant-docs >= 0.11.2
                     , servant-blaze >= 0.8
                     , blaze-html
                     , wai >= 3.2.1.1
                     , aeson >= 1.2.3.0
                     , wai-extra
                     , wai-cors
                     , postgresql-simple >= 0.5.3.0
                     , hedis >= 0.10.0
                     , simple-logger
                     , temporary
                     , http-client
                     , http-client-tls
                     , wreq >= 0.5.2.0
                     , servant-swagger >= 1.1.5
                     , swagger2 >= 2.2
                     , markdown
                     , servant-client >= 0.13
                     , binary

  exposed-modules:     RFC.Prelude
                     , RFC.String
                     , RFC.Concurrent
                     , RFC.Throttle
                     , RFC.JSON
                     , RFC.API
                     , RFC.HTTP.Types
                     , RFC.Data.LatLng
                     , RFC.Data.IdAnd
                     , RFC.Data.ListMoveDirection
                     , RFC.Data.UUID
  if impl(ghcjs)
    cpp-options:       -DCLIENT -DGHCJS_BROWSER -DBROWSER
    exposed-modules:   RFC.Miso
                     , RFC.Miso.String
                     , RFC.Miso.Routing
                     , RFC.Miso.Component
                     , RFC.Miso.MisoApp
                     , RFC.GHCJS
                     , RFC.GHCJS.XHR
                     , RFC.GHCJS.Inject
                     , RFC.GHCJS.Cookie
  else
    exposed-modules:   RFC.Psql
                     , RFC.Redis
                     , RFC.Log
                     , RFC.Wai
                     , RFC.Env
                     , RFC.HTTP.Client
                     , RFC.Servant
                     , RFC.Servant.ApiDoc
                     , RFC.Client.Coinhive


source-repository head
  type:     git
  location: https://github.com/RobertFischer/rfc
